<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.android.vicky.vibgyor.Design_Screen"
    tools:showIn="@layout/activity_design__screen">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="81dp"
        android:background="@color/red"
        android:text="@string/red"
        android:textSize="45dp"
        android:gravity="center"
        android:id="@+id/red"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="81dp"
        android:background="@color/orange"
        android:text="@string/orange"
        android:textSize="45dp"
        android:gravity="center"
        android:id="@+id/orange"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="81dp"
        android:background="@color/yellow"
        android:text="@string/yellow"
        android:textSize="45dp"
        android:gravity="center"
        android:id="@+id/yellow"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="81dp"
        android:background="@color/green"
        android:text="@string/green"
        android:textSize="45dp"
        android:gravity="center"
        android:id="@+id/green"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="81dp"
        android:background="@color/blue"
        android:text="@string/blue"
        android:textSize="45dp"
        android:gravity="center"
        android:id="@+id/blue"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="81dp"
        android:background="@color/indigo"
        android:text="@string/indigo"
        android:textSize="45dp"
        android:gravity="center"
        android:id="@+id/indigo"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="81dp"
        android:background="@color/violet"
        android:text="@string/violet"
        android:textSize="45dp"
        android:gravity="center"
        android:id="@+id/violet"/>
    </LinearLayout>
</RelativeLayout>
